# cdnizer

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
templates/: index.html
