[package]
name = "cdnizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
include_dir = { version = "0.7.3", features = ["glob", "metadata"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
size = "0.4.1"
